ChangeLog for SVN maps trunk directory:
---------------------------------------------------------------------------
python/IPO/say.py:
  Small change to use new package archetype and image from Mike B.
  -- Aaron Baugher 2007-02-10


python/IPO/say.py:
  Small change to use new carton_box archetype and images from Mike B.
  -- Aaron Baugher 2007-02-08


python/IPO/say.py:
  Changed code to give different packages different names and faces,
  and to make packages clearly show they are used after being received.
  -- Aaron Baugher 2007-02-08
